canvas-frame absolute fix
changed position to absolute to have mainrect scrollable.
removed data-tilt to fix horizontal scroll. fingers crossed.

--- a/css/main2.css
+++ b/css/main2.css
@@ -1093,6 +1093,14 @@ a:focus {
     margin-top: calc((100vh - 18em)/ -2);
 }
 
+.showcase .body .canvas-frameA {
+    position: absolute;
+    width: 100vw;
+    top: 50%;
+    height: calc(100vh - 18em);
+    margin-top: calc((100vh - 18em)/ -2);
+}
+
 .body-profile .body .canvas-frame {
     position: fixed;
     width: 100vw;
